--- a/.github/actions-rs/grcov.yml
+++ b/.github/actions-rs/grcov.yml
@@ -2,12 +2,13 @@ output-type: lcov
 output-path: ./lcov.info
 source-dir: ./src
 ignore-dir:
-  - ".cargo/"
+  - "*.cargo/*"
 ignore:
-  - "../*"
-  - "configuration.rs"
-  - "main.rs"
-  - "upstream.rs"
+  - "*.cargo*"
+  - "*rust*"
+  - "*configuration.rs"
+  - "*main.rs"
+  - "*upstream.rs"
 ignore-not-existing: true
 llvm: true
 excl-start: (.*)begin-ignore-line(.*)
