--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ HTTP Tunnel example written in Rust.
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio-tls = "0.3"
+tokio-native-tls = "0.2"
 native-tls = "0.2"
 clap = "3.0.0-beta.1"
 regex = "1.3"
@@ -33,14 +33,14 @@ strum_macros = "0.19"
 derive_builder = "0.9"
 log = "0.4"
 log4rs = "1.0.0-alpha-1"
-tokio = { version = "0.2", features = ["full"] }
-tokio-util = { version = "0.3", features = ["full"] }
-bytes = "0.5"
+tokio = { version = "0.3", features = ["full"] }
+tokio-util = { version = "0.5", features = ["full"] }
+bytes = "0.6"
 futures = "0.3"
 time = "0.1"
 
 [dev-dependencies]
-tokio-test = "0.2"
+tokio-test = "0.3"
 
 [profile.dev]
 opt-level = 0
