--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "http-tunnel"
-version = "0.1.8"
+version = "0.1.9"
 authors = ["Eugene Retunsky"]
 license = "MIT OR Apache-2.0"
 edition = "2018"
@@ -9,7 +9,7 @@ readme = "README.md"
 repository = "https://github.com/xnuter/http-tunnel"
 homepage = "https://github.com/xnuter/http-tunnel"
 description = """
-HTTP Tunnel example written in Rust.
+HTTP Tunnel/TCP Proxy example written in Rust.
 """
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
