--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,8 +42,7 @@ time = "0.1"
 [dev-dependencies]
 tokio-test = "0.4"
 
-[profile.dev]
-opt-level = 0
-
-[profile.release]
-opt-level = 3
+[features]
+# For legacy software you can enable plain_text tunnelling
+default = []
+plain_text = []
