--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,4 +15,6 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
- 
+    - name: Run tests for plain_text
+      run: cargo test --verbose --features plain_text
+
