--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ HTTP Tunnel/TCP Proxy example written in Rust.
 [dependencies]
 tokio-native-tls = "0.3"
 native-tls = "0.2"
-clap = "3.0.0-beta.1"
+clap = "2.33"
 regex = "1.3"
 rand = "0.8"
 yaml-rust = "0.4"
