--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "http-tunnel"
-version = "0.1.10"
+version = "0.1.11"
 authors = ["Eugene Retunsky"]
 license = "MIT OR Apache-2.0"
 edition = "2018"
@@ -17,7 +17,7 @@ HTTP Tunnel/TCP Proxy example written in Rust.
 [dependencies]
 tokio-native-tls = "0.3"
 native-tls = "0.2"
-clap = "2.33"
+clap = { version = "3.1.6", features = ["derive"] }
 regex = "1.3"
 rand = "0.8"
 yaml-rust = "0.4"
